Initial setup for sbt build import